tests/spec/emit/snapshots/gopkg_in_value_enum_chain_access_emits_correct_qualifier.snap
---
source: tests/spec/emit/imports.rs
description: "input: \nimport \"go:gopkg.in/yaml.v3\"\n\nfn test() {\n  let _ = yaml.Kind.ScalarNode\n}\n"
---
package main

import yaml "gopkg.in/yaml.v3"

func test() {
	_ = yaml.ScalarNode
}
