tests/spec/emit/snapshots/guard_needing_statement_lowering_keeps_the_jump_target.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn check(n: int) -> Result<bool, string> { Ok(n > 0) }
  
  fn test(opt: Option<int>) -> Result<int, string> {
    let mut out = 0
    match opt {
      Some(x) if check(x)? => { out = 1 },
      Some(_) => { out = 2 },
      None => { out = 0 },
    }
    Ok(out)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func check(n int) lisette.Result[bool, string] {
	return lisette.MakeResultOk[bool, string](n > 0)
}

func test(opt lisette.Option[int]) lisette.Result[int, string] {
	out := 0
match:
	for {
		if opt.Tag == lisette.OptionSome {
			check_1 := check(opt.SomeVal)
			if check_1.Tag != lisette.ResultOk {
				return lisette.MakeResultErr[int, string](check_1.ErrVal)
			}
			if check_1.OkVal {
				out = 1
				break match
			}
			out = 2
			break match
		}
		out = 0
		break match
	}
	return lisette.MakeResultOk[int, string](out)
}
