tests/spec/emit/snapshots/hex_escape_in_char.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> rune {
    '\x41'
  }
---
package main

func test() rune {
	return '\x41'
}
