tests/spec/emit/snapshots/hex_large.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> uint64 {
    0xC96C5795D7870F42
  }
---
package main

func test() uint64 {
	return 0xC96C5795D7870F42
}
