tests/spec/emit/snapshots/hex_literal.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    0xFF
  }
---
package main

func test() int {
	return 0xFF
}
