tests/spec/emit/snapshots/hex_max_u64.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> uint64 {
    0xFFFFFFFFFFFFFFFF
  }
---
package main

func test() uint64 {
	return 0xFFFFFFFFFFFFFFFF
}
