tests/spec/emit/snapshots/higher_order_function.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn compose(f: fn(int) -> int, g: fn(int) -> int) -> fn(int) -> int {
    |x: int| f(g(x))
  }
---
package main

func compose(f, g func(int) int) func(int) int {
	return func(x int) int {
		return f(g(x))
	}
}
